2025-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.14

	* inst/examples/allUScalendars.R: Moved from demo/
	* demo/: Removed

2025-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/newzealand.?pp: Updated from QuantLib 1.37 (rc)
	* src/ql/time/calendars/unitedstates.cpp: Idem

	* src/calendars.cpp (QlCal::CalendarContainer::setCalendar): Add
	'Auckland' to new New Zealand with 'Wellington' the default as before

2024-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.13

2024-10-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/poland.?pp: Updated from QuantLib 1.36 (rc)
	* src/ql/time/calendars/southkorea.cpp: Idem

	* src/ql/*: Small updates from 1.36 (rc) to nine more files

2024-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.12

2024-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add link to introductory 'Holidays in QuantLib' piece

2024-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/ql/time/calendars/brazil.?pp: Updated from QuantLib 1.35 (rc)

2024-07-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/chile.?pp: Updated from QuantLib 1.35 (rc)
	* src/ql/time/calendars/india.?pp: Idem
	* src/ql/time/calendars/unitedstates.cpp: Idem

2024-05-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-27  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.0.11

2024-04-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
