@@ -1,8 +1,8 @@
 Package: qlcal
 Type: Package
 Title: R Bindings to the Calendaring Functionality of 'QuantLib'
-Version: 0.0.14
-Date: 2025-01-23
+Version: 0.0.15
+Date: 2025-04-23
 Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
              person("QuantLib Authors", role = "aut"))
@@ -19,9 +19,9 @@ LinkingTo: Rcpp, BH
 RoxygenNote: 6.0.1
 NeedsCompilation: yes
 Encoding: UTF-8
-Packaged: 2025-01-23 13:58:54 UTC; edd
+Packaged: 2025-04-23 13:10:57 UTC; edd
 Author: Dirk Eddelbuettel [aut, cre] (<https://orcid.org/0000-0001-6419-907X>),
   QuantLib Authors [aut]
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Repository: CRAN
-Date/Publication: 2025-01-23 14:40:02 UTC
+Date/Publication: 2025-04-23 13:40:02 UTC
