@@ -1,17 +1,17 @@
-7b692fefa05e843a84057a329000fb11 *ChangeLog
-395bb6b180177f2fbe842e544f053976 *DESCRIPTION
+b541a9b95160899b1688330e733a1a99 *ChangeLog
+bbb0631da2e27d93773c2d0fcab80029 *DESCRIPTION
 193393020d980fb08906558e18f4b2a2 *NAMESPACE
 4c41e1ddc3f458e4e0402f129c707163 *R/RcppExports.R
 5f8f8b7b233e7c018784eaf409562ab5 *R/calendars.R
 73690438a07ba296dc87f35f20bd33bb *R/dates.R
 eb8dff28e5874c99fe2d14ac5fd2d881 *README.md
-fa807e484ae83aace6b5d6a5b2b48ada *build/partial.rdb
+dd75300ecd93ab8b7733e728cc7c0dcd *build/partial.rdb
 d0ad2b7c8669b8328a9dbe39d406b124 *cleanup
 5a04e89e816daea50eb5b25b98dafc41 *configure
 5a04e89e816daea50eb5b25b98dafc41 *configure.win
 3bb63f3c7cc2d641bfc47420787b47a0 *inst/AUTHORS
 a569a84ea46bbc872bed84d6ebf835e1 *inst/COPYRIGHTS
-9865ddafda9403ca324337a45948e424 *inst/NEWS.Rd
+a71071436c0068f87f01db2792347ebf *inst/NEWS.Rd
 49bdbe036c4dea6bf3a90da6aca3122e *inst/examples/allUScalendars.R
 aa33240a762a7b2c5c5af2711efb825c *inst/include/qlcal.h
 73b86629075005c841f400556efb2c4c *inst/include/qlcal_RcppExports.h
@@ -71,7 +71,7 @@ f6ce68d1e2f5b3b2924948f39cb2ee46 *src/ql/time/calendars/botswana.hpp
 fb7148db35b3388d604f94ccabc8e8b3 *src/ql/time/calendars/canada.hpp
 dce8e6244eb40861460db9a17ca2f16f *src/ql/time/calendars/chile.cpp
 0ecc123661ec7c4722b8cdc272e08128 *src/ql/time/calendars/chile.hpp
-06e45199fb8d58a6cd1830a9b78d0466 *src/ql/time/calendars/china.cpp
+908ca709d3a65eadd96468a5c78e263c *src/ql/time/calendars/china.cpp
 66b897cf66f08631925d63987f1ea14b *src/ql/time/calendars/china.hpp
 f53dae76e7295422418470047a1e3287 *src/ql/time/calendars/czechrepublic.cpp
 4299f7c1a582b745e78989ca908879d4 *src/ql/time/calendars/czechrepublic.hpp
@@ -83,7 +83,7 @@ bb3b79835d7ea6e2478687204f3a77a5 *src/ql/time/calendars/denmark.hpp
 f81b96c897d98804b1b1af1714f3eb30 *src/ql/time/calendars/france.hpp
 357820f06cc853ee378f2f8315702c00 *src/ql/time/calendars/germany.cpp
 d2d21cd6b3bec7beb4e2376a05a5884d *src/ql/time/calendars/germany.hpp
-946d72e6b5136775ed45fdc7a3866157 *src/ql/time/calendars/hongkong.cpp
+f63c1f12418fb7bdf04c155815639cce *src/ql/time/calendars/hongkong.cpp
 a32490752e0d2571a93af479dd52eea2 *src/ql/time/calendars/hongkong.hpp
 cced6f1346cec8ce3638d0dc66d17a7f *src/ql/time/calendars/hungary.cpp
 fa4c77ce940f408a1141b3dd410fc4e6 *src/ql/time/calendars/hungary.hpp
@@ -132,7 +132,7 @@ f48466c9edb8da6d4623cb5b85174aa5 *src/ql/time/calendars/taiwan.cpp
 5264414b3348aad2a06ba1a166f9c8e8 *src/ql/time/calendars/taiwan.hpp
 b62237ba3cec74feca3af181e8fb2414 *src/ql/time/calendars/target.cpp
 fdafc1942943c88e0720c823c4c227a5 *src/ql/time/calendars/target.hpp
-bc2e96260134cdf21bf08cdce0ab5073 *src/ql/time/calendars/thailand.cpp
+d174d699dfcab3cea1dbb898630369cd *src/ql/time/calendars/thailand.cpp
 6bc78176979fbdcfce882e9dbb572250 *src/ql/time/calendars/thailand.hpp
 80c986f7c849a4a29242864e91b59746 *src/ql/time/calendars/turkey.cpp
 7f7ec06eaed49957ebb41f8615b25730 *src/ql/time/calendars/turkey.hpp
